<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String of ImageView contentDescribsion -->
    <string name="Logo">It just a logo</string>
    <string name="item_trading_record">It just a pic</string>
    <!-- String of MainService -->
    <string name="Error">Error</string>
    <string name="NoSignalException">No signal to connect the net</string>
    <string name="btn_setnet">Setting</string>
    <string name="btn_exit">Exit</string>

    <!-- String of Login Activity -->
    <string name="app_name">BillMe</string>
    <string name="iv_userportrait_contentDescription">It just a user portrait.</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="pd_logining_text">Logining..</string>

    <!-- String of Main Activity -->
    <string name="btn_payment">Pay!</string>
    <string name="btn_repayment">RePay!</string>
    <string name="tv_imformation_userName">UserName here</string>
    <string name="tv_imformation_acountBalance">Acount Balance here</string>

    <!-- String of userImformation Activity -->
    <string name="btn_bank_cards">Bank Cards</string>
    <string name="btn_trading_record">Trading Record</string>
    <string name="btn_setting_acount">Setting Acount</string>
    <string name="btn_logout">Logout!</string>
    <string name="btn_next">Next Page</string>
    <string name="btn_pre">Pre Page</string>

    <!-- String of payment Activity -->
    <string name="btn_pay_by_QRcode">Scan QRCode</string>
    <string name="btn_pay_by_NFC">NFC</string>
    <string name="btn_clear_cart">Clear Cart</string>
    <string name="btn_pay_cart">Pay the Cart!</string>
    <string name="cart">Cart</string>
    <string name="amountTag">Amount</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_nfcpayment">NFCPayment</string>
    <string name="tv_nfc_payment">请将您的手机靠近nfc设备</string>
    <string name="title_activity_payment_confirm">PaymentConfirmActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_society">SocietyActivity</string>
    <string name="title_activity_surround">SurroundActivity</string>
    <string name="title_activity_management">ManagementActivity</string>
    <string name="title_activity_coupon">CouponActivity</string>
    <string name="title_activity_grade">GradeActivity</string>
    <string name="title_activity_relation">RelationActivity</string>
    <string name="title_activity_trade_record">TradeRecordActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_enterprise">SearchEnterpriseActivity</string>
    <string name="title_activity_day1404__io">Day1404_IOActivity</string>

</resources>