<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_pay_by_QRcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_pay_by_QRcode" />

    <Button
        android:id="@+id/btn_pay_by_NFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_pay_by_NFC" />

    <SlidingDrawer
        android:id="@+id/sd_shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:content="@+id/sd_shopping_cart_content"
        android:handle="@+id/sd_shopping_cart_handle" >

        <Button
            android:id="@+id/sd_shopping_cart_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart" />

        <LinearLayout
            android:id="@+id/sd_shopping_cart_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/lv_item_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_amount_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/tv_amount"
                    android:text="@string/amountTag" />

                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0.0" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_clear_cart"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_clear_cart" />

                <Button
                    android:id="@+id/btn_pay_cart"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_pay_cart" />
            </LinearLayout>
        </LinearLayout>
    </SlidingDrawer>

</LinearLayout>